<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">H-BRS Stundenplan</string>
    <string name="title_stundenplan">Stundenplan</string>
    <string name="title_grades">Noten</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_timetable_importer">Stundenplan H-BRS Importer FB02</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_remove_items">Einträge aus Kalendar entfernen</string>
    <string name="action_import">Import</string>
    <string name="action_today">Heute</string>
    <string name="action_jump_to_date">Zu Datum springen</string>
    <string name="action_donate">Donate</string>
    <string name="action_save">Save</string>
    <string name="action_login">Login</string>
    <string name="title_fragment_exam_details">Exam Details</string>
    <string name="title_activity_donations">Donations</string>

    <string-array name="donation_google_catalog_values">
        <item>1 Euro</item>
        <item>2 Euros</item>
        <item>3 Euros</item>
        <item>5 Euros</item>
        <item>8 Euros</item>
        <item>13 Euros</item>
    </string-array>

    <string name="donation_paypal_item">Donation</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <!-- Strings related to login -->
    <string name="pref_title_username">Username</string>
    <string name="pref_title_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_progress_signing_in">Signing in…</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_url">This url is incorrect</string>
    <string name="login_dialog_text_something_went_wrong">Something went wrong :(</string>
    <string name="title_activity_sync_interval_selector">Sync Interval Selector</string>

    <string-array name="array_sync_interval">
        <item>5 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>45 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
        <item>3 Hours</item>
        <item>6 Hours</item>
        <item>12 Hours</item>
        <item>24 Hours</item>
    </string-array>
    <string-array name="array_sync_interval_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string name="title_activity_timetable_select_group">Select Group</string>

    <string name="title_fragment_fb02_schedule">FB02 Zeitplan</string>
    <string name="title_fragment_professors">Professoren</string>

</resources>
